[gd_scene load_steps=9 format=3 uid="uid://bx6bx1xr6jp8u"]

[ext_resource type="Script" path="res://scenes/Prince.gd" id="1_53cng"]
[ext_resource type="PackedScene" uid="uid://np2b31cxcdak" path="res://scenes/WorldView.tscn" id="2_aekfh"]
[ext_resource type="Script" path="res://scenes/ui/GameCamera.gd" id="3_f6d0o"]
[ext_resource type="PackedScene" uid="uid://gkv5k4rf7pyi" path="res://scenes/ui/TileSelected.tscn" id="3_la7yk"]
[ext_resource type="Script" path="res://scenes/ui/tile_info.gd" id="4_30ta2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x8ehp"]

[sub_resource type="QuadMesh" id="QuadMesh_w2imv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tt8ca"]

[node name="Prince" type="Node3D"]
script = ExtResource("1_53cng")

[node name="WorldView" parent="." instance=ExtResource("2_aekfh")]

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 0, 10, 15)
script = ExtResource("3_f6d0o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)

[node name="TileSelected" parent="." instance=ExtResource("3_la7yk")]

[node name="TileInfo" type="Panel" parent="TileSelected"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -300.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_x8ehp")
script = ExtResource("4_30ta2")

[node name="VBoxContainer" type="VBoxContainer" parent="TileSelected/TileInfo"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
alignment = 1

[node name="Title" type="Label" parent="TileSelected/TileInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Elevation" type="Label" parent="TileSelected/TileInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="River" type="Label" parent="TileSelected/TileInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coordinates" type="Label" parent="TileSelected/TileInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="Climate" type="Label" parent="TileSelected/TileInfo/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_w2imv")
surface_material_override/0 = SubResource("StandardMaterial3D_tt8ca")

[node name="MinimapCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
